--- a/var/httpd/htdocs/skins/Customer/default/css/TUILM/MyCSSChangesCustomer.css
+++ b/var/httpd/htdocs/skins/Customer/default/css/TUILM/MyCSSChangesCustomer.css
@@ -418,5 +418,8 @@ table.Overview {
    padding: 8px 11px;
 }
 
-
+.SearchResults .MessageBox, .ActionRow {
+   height: auto;
+   margin: auto;
+}
 
