--- a/var/httpd/htdocs/skins/Customer/default/css/TUILM/MyCSSChangesCustomer.css
+++ b/var/httpd/htdocs/skins/Customer/default/css/TUILM/MyCSSChangesCustomer.css
@@ -418,8 +418,13 @@ table.Overview {
    padding: 8px 11px;
 }
 
+.Center {
+    text-align: center;
+}
 .SearchResults .MessageBox, .ActionRow {
    height: auto;
    margin: auto;
 }
+
+
 
