--- a/var/httpd/htdocs/skins/Agent/default/css/TUILM/MyCSSChangesAgent.css
+++ b/var/httpd/htdocs/skins/Agent/default/css/TUILM/MyCSSChangesAgent.css
@@ -339,3 +339,9 @@ form fieldset {
 .ActionMenu {
    display: block;
 }
+#ArticleTableBody .Scroller {
+   height: auto;
+}
+.Dialog > .Content > .InnerContent {
+	max-height: auto;
+}
