--- a/var/httpd/htdocs/skins/Customer/default/css/TUILM/MyCSSChangesCustomer.css
+++ b/var/httpd/htdocs/skins/Customer/default/css/TUILM/MyCSSChangesCustomer.css
@@ -445,3 +445,19 @@ table.Overview {
     min-width: 23pc;
     margin: 10px 70px 21px;
 }
+#MainBox > .Content {
+	width: 782px;
+} 
+#NewCustomerTicket > fieldset {
+	margin-left: 7px;
+    margin-right: 7px;
+    padding-left: 9px;
+    padding-right: 9px;
+}
+#submitRichText { 
+	width: 139px;
+}
+#Attachment { 
+	font-size: 11px;    
+	font-weight: bold;
+}
